# openthread

./: .appveyor.yml  .astyle-opts  .clang-format  .clang-tidy  .cmake-format.yaml  .code-spell-ignore  .codecov.yml  .gitattributes  .gitignore  .gitmodules  .gn  .travis.yml  .uncrustify.cfg  AGENTS.md  AUTHORS  Android.bp  Android.mk  BUILD.gn  CHANGES  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cert_6_1_09_EDSynchronization.json  GEMINI.md  LICENSE  METADATA  Makefile-Standalone  Makefile.am  Makefile.in  NOTICE  OWNERS  P2P_README.md  README.android  README.md  README.version  SECURITY.md  STYLE_GUIDE.md  annotated.html  annotated.js  (+482 more)
src/cli/: BUILD.gn  CMakeLists.txt  Makefile.am  README.md  README_BDX_PERF.md  README_BLE.md  README_BR.md  README_COAP.md  README_COAPS.md  README_COMMISSIONER.md  README_COMMISSIONING.md  README_DATASET.md  README_EST_CLIENT.md  README_HISTORY.md  README_JOINER.md  README_LATENCY.md  README_MDNS.md  README_MQTT.md  README_NETDATA.md  README_PERF.md  README_SRP.md  README_SRP_CLIENT.md  README_SRP_REPLICATION.md  README_SRP_SERVER.md  README_TCAT.md  README_TCP.md  README_UDP.md  adv_data.hpp  cli.cpp  cli.hpp  cli.vcxproj  cli.vcxproj.filters  cli_api.cpp  cli_ba.cpp  cli_ba.hpp  cli_bbr.cpp  cli_bbr.hpp  cli_bdx_perf.cpp  cli_bdx_perf.hpp  cli_ble.cpp  (+89 more)
src/core/: BUILD.gn  CMakeLists.txt  Makefile.am  core.vcxproj  ftd.cmake  libopenthread.vcxproj  libopenthread.vcxproj.filters  libopenthread_k.vcxproj  libopenthread_k.vcxproj.filters  mdns.cmake  mtd.cmake  openthread-core-config-check.h  openthread-core-config.h  openthread-core-default-config.h  openthread-instance.h  openthread-single-instance.h  openthread-thread_v1_2-core-default-config.h  openthread.cpp  openthreadcontext.h  openthreadinstance.h  otCoreK.vcxproj  otCoreK.vcxproj.filters  radio.cmake  radio_alone.cmake  radio_cli.cmake
src/ncp/: BUILD.gn  CMakeLists.txt  Makefile.am  PROTOCOL.md  changed_props_set.cpp  changed_props_set.hpp  example_vendor_hook.cpp  flen.cpp  flen.hpp  ftd.cmake  hdlc.cpp  hdlc.hpp  mtd.cmake  multipan_platform.cpp  ncp.cpp  ncp.hpp  ncp_base.cpp  ncp_base.hpp  ncp_base_dispatcher.cpp  ncp_base_ftd.cpp  ncp_base_mtd.cpp  ncp_base_radio.cpp  ncp_buffer.cpp  ncp_buffer.hpp  ncp_command_defs.hpp  ncp_config.h  ncp_cpc.cpp  ncp_cpc.hpp  ncp_get_prop_defs.hpp  ncp_hdlc.cpp  ncp_hdlc.hpp  ncp_insert_prop_defs.hpp  ncp_remove_prop_defs.hpp  ncp_set_prop_defs.hpp  ncp_spi.cpp  ncp_spi.hpp  ncp_spi.vcxproj  ncp_spi.vcxproj.filters  ncp_uart.cpp  ncp_uart.hpp  (+14 more)
src/posix/: CMakeLists.txt  Makefile-posix  Makefile.am  README.md  cli.cmake  cli.cpp  cli_readline.cpp  cli_stdio.cpp  client.c  client.cpp  console_cli.c  console_cli.cpp  console_cli.h  daemon.cmake  main.c  ncp.cmake  ncp.cpp  ot-cli  ot-ncp  standalone.cmake
tests/: CMakeLists.txt  Makefile.am
tests/fuzz/: CMakeLists.txt  Makefile.am  cli.cpp  cli_received.cpp  cli_uart_received.cpp  fuzz_cli.cpp  fuzz_dnssd_server.cpp  fuzz_icmp6.cpp  fuzz_ip6.cpp  fuzz_ip6_frag_reassembly.cpp  fuzz_mdns.cpp  fuzz_radio-one-node.cpp  fuzz_srp_server.cpp  fuzz_tcplp_bitmap.cpp  fuzz_trel.cpp  fuzzer_platform.c  fuzzer_platform.cpp  fuzzer_platform.h  icmp6.cpp  ip6.cpp  ip6_send.cpp  mdns.cpp  ncp_hdlc_received.cpp  ncp_uart_received.cpp  oss-fuzz-build  radio-one-node.cpp  radio_receive_done.cpp  trel.cpp
tests/gtest/: CMakeLists.txt  dataset_test.cpp  epskc_test.cpp  fake_coprocessor_platform.cpp  fake_coprocessor_platform.hpp  fake_platform.cpp  fake_platform.hpp  link_raw_test.cpp  mock_callback.hpp  radio_spinel_rcp_test.cpp  radio_spinel_test.cpp  spi_interface_test.cpp  state_callback_test.cpp  udp_test.cpp
tests/nexus/: CMakeLists.txt  README.md  build.sh  openthread-core-nexus-config.h  run_nexus_tests.sh  test-v1-2-LP-5-3-1.txt  test_1_1_5_1_1.cpp  test_1_1_5_1_10.cpp  test_1_1_5_1_11.cpp  test_1_1_5_1_12.cpp  test_1_1_5_1_13.cpp  test_1_1_5_1_2.cpp  test_1_1_5_1_3.cpp  test_1_1_5_1_4.cpp  test_1_1_5_1_5.cpp  test_1_1_5_1_6.cpp  test_1_1_5_1_7.cpp  test_1_1_5_1_8.cpp  test_1_1_5_1_9.cpp  test_1_1_5_2_1.cpp  test_1_1_5_2_3.cpp  test_1_1_5_2_4.cpp  test_1_1_5_2_5.cpp  test_1_1_5_2_6.cpp  test_1_1_5_2_7.cpp  test_1_1_5_3_1.cpp  test_1_1_5_3_10.cpp  test_1_1_5_3_11.cpp  test_1_1_5_3_2.cpp  test_1_1_5_3_3.cpp  test_1_1_5_3_4.cpp  test_1_1_5_3_5.cpp  test_1_1_5_3_6.cpp  test_1_1_5_3_7.cpp  test_1_1_5_3_8.cpp  test_1_1_5_3_9.cpp  test_1_1_5_5_1.cpp  test_1_1_5_5_2.cpp  test_1_1_5_5_3.cpp  test_1_1_5_5_4_1.cpp  (+557 more)
tests/otTestRunner/: AssemblyInfo.cs  Program.cs
tests/scripts/: Makefile.am
tests/spinel-only/: CMakeLists.txt  mac_frame_stubs.cpp  openthread-core-spinel-only-config.h  platform_stubs.c
tests/toranj/: CMakeLists.txt  README.md  README_CLI.md  README_NCP.md  build.sh  openthread-core-toranj-config-ip6-pool-test.h  openthread-core-toranj-config-posix.h  openthread-core-toranj-config-simulation.h  openthread-core-toranj-config.h  start.sh  test-001-get-set.py  test-002-form.py  test-003-join.py  test-004-scan.py  test-005-discover-scan.py  test-006-traffic-router-end-device.py  test-007-traffic-router-sleepy.py  test-008-permit-join.py  test-009-insecure-traffic-join.py  test-010-on-mesh-prefix-config-gateway.py  test-011-child-table.py  test-012-multi-hop-traffic.py  test-013-off-mesh-route-traffic.py  test-014-ip6-address-add.py  test-015-same-prefix-on-multiple-nodes.py  test-016-neighbor-table.py  test-017-parent-reset-child-recovery.py  test-018-child-supervision.py  test-019-inform-previous-parent.py  test-020-router-table.py  test-021-address-cache-table.py  test-022-multicast-ip6-address.py  test-023-multicast-traffic.py  test-024-partition-merge.py  test-025-network-data-timeout.py  test-026-slaac-address-wpantund.py  test-026-slaac-address.py  test-027-child-mode-change.py  test-028-router-leader-reset-recovery.py  test-029-data-poll-interval.py  (+21 more)
tests/unit/: CMakeLists.txt  Makefile.am  README.md  aes.vcxproj  hmac_sha256.vcxproj  link_quality.vcxproj  lowpan.vcxproj  mac_frame.vcxproj  message.vcxproj  ncp_buffer.vcxproj  test_address_sanitizer.cpp  (+115 more)
(+9344 files in other folders)
